--- a/hugo.toml
+++ b/hugo.toml
@@ -9,11 +9,15 @@ pageRef = '/'
 weight = 10
 
 [[menus.main]]
-name = 'Posts'
-pageRef = '/posts'
+name = 'Notes'
+pageRef = '/notes'
 weight = 20
 
 [[menus.main]]
 name = 'Tags'
 pageRef = '/tags'
 weight = 30
+
+[markup]
+    [markup.highlight]
+        noClasses = false
